--- a/.gitignore
+++ b/.gitignore
@@ -338,3 +338,4 @@ ASALocalRun/
 .localhistory/
 /.vs/AlexandriaLibrary/DesignTimeBuild/.dtbcache.v2
 /.vs/AlexandriaLibrary/FileContentIndex/6b20a898-1e36-4e8b-bddb-282abf7b2daa.vsidx
+/.vs/AlexandriaLibrary/FileContentIndex/adbd0f40-d9a6-428a-8466-0191e228fb63.vsidx
