--- a/.gitignore
+++ b/.gitignore
@@ -339,3 +339,9 @@ ASALocalRun/
 /.vs/AlexandriaLibrary/DesignTimeBuild/.dtbcache.v2
 /.vs/AlexandriaLibrary/FileContentIndex/6b20a898-1e36-4e8b-bddb-282abf7b2daa.vsidx
 /.vs/AlexandriaLibrary/FileContentIndex/adbd0f40-d9a6-428a-8466-0191e228fb63.vsidx
+/.vs/AlexandriaLibrary/FileContentIndex/a0509324-d6a6-4e59-b984-a3e2b50d353c.vsidx
+/.vs/AlexandriaLibrary/FileContentIndex/be9a83a8-9148-476b-b42a-6c642975121a.vsidx
+/.vs/ProjectEvaluation/alexandrialibrary.metadata.v7.bin
+/.vs/ProjectEvaluation/alexandrialibrary.projects.v7.bin
+/.vs/AlexandriaLibrary/v17/.suo
+/.vs/AlexandriaLibrary/v17/.futdcache.v2
